@@ -54,7 +54,7 @@ public enum Reporter {
         return new ReportableTR(
                 title(annotation),
                 annotation.predicate(),
-                List.of(
+                Arrays.asList(
                         "Predicate Value: " + annotation.predicateValue(),
                         "Major Clause: " + annotation.majorClause()
                 ),
@@ -89,7 +89,7 @@ public enum Reporter {
         return new ReportableTR(
                 title(annotation),
                 annotation.predicate(),
-                List.of(
+                Arrays.asList(
                         "DNF: " + annotation.dnf(),
                         "Implicant: " + annotation.implicant(),
                         "Clause: " + annotation.clause()
@@ -102,7 +102,7 @@ public enum Reporter {
         return new ReportableTR(
                 title(annotation),
                 annotation.predicate(),
-                List.of(
+                Arrays.asList(
                         "DNF: " + annotation.dnf(),
                         "Implicant: " + annotation.implicant()
                 ),
